--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Lato&display=swap" rel="stylesheet"> 
   <meta charset="utf-8">
   <title>NimbatColony.info - DEV</title>
-  <base href="./nimbat-colony/">
+  <base href="/nimbat-colony/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico?">
 </head>
