--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Lato&display=swap" rel="stylesheet"> 
   <meta charset="utf-8">
-  <title>NimbatColony.info - DEV</title>
+  <title>NimbatColony.info</title>
   <base href=".">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico?">
